--- a/package.json
+++ b/package.json
@@ -5,42 +5,41 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@nextui-org/react": "^2.4.6",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@heroui/react": "^2.8.7",
+    "@hookform/resolvers": "^5.2.2",
+    "@reduxjs/toolkit": "^2.11.2",
     "@smastrom/react-rating": "^1.5.0",
-    "axios": "^1.7.4",
-    "date-fns": "^3.6.0",
-    "framer-motion": "^11.3.28",
-    "lucide-react": "^0.428.0",
-    "qs": "^6.13.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.2",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.1",
-    "sonner": "^1.5.0",
-    "valibot": "^0.37.0"
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.562.0",
+    "qs": "^6.14.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.69.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.11.0",
+    "sonner": "^2.0.7",
+    "valibot": "^1.2.0"
   },
   "devDependencies": {
-    "@types/qs": "^6.9.15",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.2.0",
-    "@typescript-eslint/parser": "^8.2.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.1"
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
+    "@types/qs": "^6.14.0",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.4"
   }
 }
